package com.niudada;

public interface Immortal {

    /**
     * 攻击
     */
    void attack();

    /**
     * 灵力修为
     */
    int getPower();

    /**
     * 撤退
     */
    void retreat();
}
