@startuml
class com.niudada.BasicImmortal {
+ void attack()
+ int getPower()
+ void retreat()
}

interface com.niudada.Immortal {
~ void attack()
~ int getPower()
~ void retreat()
}

class com.niudada.SwordDecorator {
- Immortal decoratedImmortal
+ void attack()
+ int getPower()
+ void retreat()
}


class com.niudada.ShieldDecorator {
- Immortal decoratedImmortal
+ void attack()
+ int getPower()
+ void retreat()
}




com.niudada.Immortal <|.. com.niudada.BasicImmortal
com.niudada.Immortal <|.. com.niudada.SwordDecorator
com.niudada.Immortal <|.. com.niudada.ShieldDecorator
@enduml